--- a/5_Advanced_Supervised_Deep_Learning.ipynb
+++ b/5_Advanced_Supervised_Deep_Learning.ipynb
@@ -275,7 +275,7 @@
     "sample_df = pd.read_csv(path.join('data', 'sample_df.tsv'), sep=\"\\t\", header='infer')\n",
     "\n",
     "# Finally we load directly from the ICGC database the histology excel file\n",
-    "histology_df = pd.read_excel('https://dcc.icgc.org/api/v1/download?fn=/PCAWG/clinical_and_histology/pcawg_specimen_histology_August2016_v9.xlsx')\n",
+    "histology_df = pd.read_excel(path.join('data', 'pcawg_specimen_histology_August2016_v9.xlsx'))\n",
     "histology_df.columns = ['icgc_specimen_id'] + list(histology_df.columns[1:])\n",
     "\n",
     "# Generate a dictionary to translate the Specimen IDs to the histological subtype and get the labels y\n",
@@ -2444,7 +2444,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "438px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
