--- a/Evaluation_exercises.ipynb
+++ b/Evaluation_exercises.ipynb
@@ -78,17 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "70fc3cd9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-19 15:48:24.538200: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdb53868c10>"
+       "<matplotlib.image.AxesImage at 0x7f57c59e43d0>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -104,7 +112,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.datasets import mnist\n",
+    "from keras.datasets import mnist\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load and preprocess the MNIST dataset\n",
@@ -177,13 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cd981df0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code goes here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b737369",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
