Update due to ICGC closure

--- a/0_Complete_course.ipynb
+++ b/0_Complete_course.ipynb
@@ -301,13 +301,17 @@
    "source": [
     "Several international consortium have generated multi-omic cancer datasets. One of them, enmarked within The Cancer Genome Atlas (TCGA) is the Pan Cancer Analysis of Whole Genomes (PCAWG) initiative. Public available data is stored at the International Cancer Genome Consortium (ICGC) database: https://dcc.icgc.org/releases/PCAWG\n",
     "\n",
+    "UPDATE: The data from the PCAWG, which was available at the ICGC portal, is no longer of public access due to the closure in June 24 of 2024. The large files that cannot be stored on GitHub directly are on the Google Drive link of the documentation.\n",
+    "\n",
     "Some files are particularly interesting for analysis with Machine Learning techniques:\n",
     "\n",
     "- Clinical (phenotypical) information for each donor belonging to given project, contained at **pcawg_donor_clinical_August2016_v9.xlsx** file. Here you have relevant information such as the donor sex, the vital status, the treatment, the age at diagnosis and the history of smoking and alcohol habits.\n",
     "- Relationship between donor, specimen and sample identifications at **pcawg_sample_sheet.tsv** file. A donor is the individual with cancer, where several specimens (biopsies of tumor or healthy tissue) can be collected. Moreover, from these specimens more than one samples could be collected to extract omics information (WGS, RNA-seq,...).\n",
     "- A matrix with the expression in transcript per millions (TPMs) for multiple genes across several samples. This information is contained at **pcawg.rnaseq.transcript.expr.tpm.tsv.gz**.\n",
     "<!-- - A list of known detected driver mutations on samples, contained at **TableS3_panorama_driver_mutations_ICGC_samples.public.tsv.gz**. -->\n",
-    "- A matrix of the proportion of mutations attributed to a given mutation signature across specimens with Signature Analyzer. The data is contained at the **SignatureAnalyzer_COMPOSITE.SBS.txt** file."
+    "- A matrix of the proportion of mutations attributed to a given mutation signature across specimens with Signature Analyzer. The data is contained at the **SignatureAnalyzer_COMPOSITE.SBS.txt** file.\n",
+    "\n",
+    "All files with the exception of **pcawg.rnaseq.transcript.expr.tpm.tsv.gz**, which needs to be downloaded from https://drive.google.com/file/d/1V2_deNxYowAG2mvb9OqMCg0WC2uPX3LM."
    ]
   },
   {
@@ -381,7 +385,7 @@
    "source": [
     "# The clinical information of the donors\n",
     "## It is an excel file, so we use the function read_excel from pandas\n",
-    "clinical_df = pd.read_excel('https://dcc.icgc.org/api/v1/download?fn=/PCAWG/clinical_and_histology/pcawg_donor_clinical_August2016_v9.xlsx')\n",
+    "clinical_df = pd.read_excel('data/pcawg_donor_clinical_August2016_v9.xlsx')\n",
     "clinical_df"
    ]
   },
@@ -460,18 +464,7 @@
    "id": "6ad6bea4",
    "metadata": {},
    "source": [
-    "Notice that know except for the sex and vital status categories, the NA category nan from numpy is the most common category across the information on the patients. This is going to complicate analysis using this clinical phenotypical data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d1a3fbbd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Save it on the data folder for later uses.\n",
-    "clinical_df.to_csv(path.join('data', 'clinical_df.tsv'), sep='\\t', index=False)"
+    "Notice that now except for the sex and vital status features, the NA category nan from numpy is the most common category across the information on the patients. This is going to complicate analysis using this clinical phenotypical data."
    ]
   },
   {
@@ -479,7 +472,7 @@
    "id": "d47fa1bb",
    "metadata": {},
    "source": [
-    "Now we can download the file with relation of specimens and samples extracted from each donor. It is just a file that helps connect by IDs other files, so let's have a quick look."
+    "Now we can check the file with relation of specimens and samples extracted from each donor. It is just a file that helps connect by IDs other files, so let's have a quick look."
    ]
   },
   {
@@ -491,7 +484,7 @@
    "source": [
     "## It is a tabular separated file, so we read with the read_csv function specifying the tabulator \\t as the separator character\n",
     "## Moreover, we indicate that the file has a header that should be inferred as the column names.\n",
-    "sample_df = pd.read_csv('https://dcc.icgc.org/api/v1/download?fn=/PCAWG/donors_and_biospecimens/pcawg_sample_sheet.tsv', sep='\\t', header='infer')\n",
+    "sample_df = pd.read_csv('data/pcawg_sample_sheet.tsv', sep='\\t', header='infer')\n",
     "sample_df"
    ]
   },
@@ -528,7 +521,7 @@
    "id": "9416cbc4",
    "metadata": {},
    "source": [
-    "Next, the expression data is downloaded. This **is a very large file and using pandas function will take time**. As a simple alternative, you can download it directly with your browser **into the *data* folder where this jupyter notebook is located**: https://dcc.icgc.org/api/v1/download?fn=/PCAWG/transcriptome/transcript_expression/pcawg.rnaseq.transcript.expr.tpm.tsv.gz"
+    "Next, we can explore the file with the expression data. Remember to **download and save it into the data folder** at https://drive.google.com/file/d/1V2_deNxYowAG2mvb9OqMCg0WC2uPX3LM."
    ]
   },
   {
@@ -540,7 +533,7 @@
    "source": [
     "# Load the expression data\n",
     "expression_df = pd.read_csv(path.join('data', 'pcawg.rnaseq.transcript.expr.tpm.tsv.gz'), sep='\\t', header='infer', compression='gzip')\n",
-    "expression_df"
+    "expression_df.head()"
    ]
   },
   {
@@ -550,9 +543,9 @@
    "source": [
     "Here the first column shows a the Ensembl Transcript ID and the rest of the columns, whose name is the aliquot ID (present at the **pcawg_sample_sheet.tsv** file).\n",
     "\n",
-    "If we want to add gene IDs or Symbols instead of transcript IDs, we will need to process the file that the PCAWG consortium uses for annotation, located at: https://dcc.icgc.org/api/v1/download?fn=/PCAWG/drivers/expression/rnaseq.gc19_extNc.gtf.tar.gz\n",
+    "If we want to add gene IDs or Symbols instead of transcript IDs, we will need to process the file that the PCAWG consortium uses for annotation. The file is already present on your data folder, but it will need some preprocessing.\n",
     "\n",
-    "Another alternative than using the browser is to use a bash script. In Jupyter notebooks, you can use other interpreters rather than python. The script below is able to download and process the necessary file (If you don't have a linux-based operative system, skip this step. The file is already provided in the data folder)."
+    "We will perform the preprocessing with a bash script. In Jupyter notebooks, you can use other interpreters rather than python. The script below is able to download and process the necessary file (If you don't have a linux-based operative system, skip this step. The final processed file is already provided in the data folder)."
    ]
   },
   {
@@ -567,9 +560,6 @@
     "\n",
     "# Change into the data directory\n",
     "cd data\n",
-    "\n",
-    "# Download the file from the ICGC\n",
-    "wget -O rnaseq.gc19_extNc.gtf.tar.gz https://dcc.icgc.org/api/v1/download?fn=/PCAWG/drivers/expression/rnaseq.gc19_extNc.gtf.tar.gz\n",
     "\n",
     "# Process the file using a bash code\n",
     "zcat rnaseq.gc19_extNc.gtf.tar.gz | cut -f9 | cut -d';' -f2 | sed 's/.*gencode::\\([^:]*\\)::tc_\\([^._]*\\)[^:]*::\\([^._]*\\)[^:]*.*/\\1\\t\\2\\t\\3/' | sort | uniq | tail -n +3 | gzip > gencode_transcript.tsv.gz"
@@ -772,7 +762,7 @@
    "id": "92bb131e",
    "metadata": {},
    "source": [
-    "Finally, we can download the signature number of attributed mutations for each specimen."
+    "Finally, we can explore the signature number of attributed mutations for each specimen."
    ]
   },
   {
@@ -782,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signatures_df = pd.read_csv('https://dcc.icgc.org/api/v1/download?fn=/PCAWG/mutational_signatures/Signatures_in_Samples/SA_Signatures_in_Samples/SA_Full_PCAWG_Attributions/SA_COMPOSITE_SNV.activity.FULL_SET.031918.txt', sep='\\t', header='infer')\n",
+    "signatures_df = pd.read_csv('data/SA_COMPOSITE_SNV.activity.FULL_SET.031918.txt', sep='\\t', header='infer')\n",
     "signatures_df"
    ]
   },
