--- a/3_Basic_Supervised_Regression_and_Feature_extraction.ipynb
+++ b/3_Basic_Supervised_Regression_and_Feature_extraction.ipynb
@@ -170,7 +170,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Load the clinical information of patients\n",
-    "clinical_df = pd.read_csv(path.join('data', 'clinical_df.tsv'), sep='\\t', header='infer')\n",
+    "clinical_df = pd.read_excel('data/pcawg_donor_clinical_August2016_v9.xlsx')\n",
     "\n",
     "# Load the clinical information of patients\n",
     "sample_df = pd.read_csv(path.join('data', 'sample_df.tsv'), sep='\\t', header='infer')\n",
