--- a/4_Basic_Supervised_Classification.ipynb
+++ b/4_Basic_Supervised_Classification.ipynb
@@ -1094,7 +1094,7 @@
     "\n",
     "<!-- Add an empty line here -->\n",
     "\n",
-    "[![Logit function](https://i.stack.imgur.com/WY61Z.png)](https://en.wikipedia.org/wiki/Logit)\n",
+    "[![Logit function](https://i.sstatic.net/WY61Z.png)](https://en.wikipedia.org/wiki/Logit)\n",
     "\n",
     "<!-- Add an empty line here -->\n",
     "\n",
