Histology ICGC link broken

--- a/2_Unsupervised_algorithms.ipynb
+++ b/2_Unsupervised_algorithms.ipynb
@@ -897,7 +897,7 @@
     "\n",
     "        # Plot the t-SNE results with cluster colors\n",
     "        plt.figure(figsize=(10, 8))\n",
-    "        plt.scatter(tsne_df['TSNE1'], tsne_df['TSNE2'], c=clusters, cmap='tab20', s=5)\n",
+    "        plt.scatter(tsne_result[:,0], tsne_result[:,1], c=clusters, cmap='tab20', s=5)\n",
     "        plt.title(f't-SNE Visualization (Clusters={num_clusters_list[i]})', color=to_hex(color_map.colors[i]))\n",
     "        plt.xlabel('t-SNE Component 1')\n",
     "        plt.ylabel('t-SNE Component 2')\n",
@@ -958,7 +958,7 @@
     "    \n",
     "        # Plot the t-SNE results with cluster colors\n",
     "        plt.figure(figsize=(10, 8))\n",
-    "        plt.scatter(tsne_result['TSNE1'], tsne_result['TSNE2'], c=clusters, cmap='tab20', s=5)\n",
+    "        plt.scatter(tsne_result[:,0], tsne_result[:,1], c=clusters, cmap='tab20', s=5)\n",
     "        plt.title(f't-SNE Visualization (Clusters={num_clusters})')\n",
     "        plt.xlabel('t-SNE Component 1')\n",
     "        plt.ylabel('t-SNE Component 2')\n",
