--- a/4_Basic_Supervised_Classification.ipynb
+++ b/4_Basic_Supervised_Classification.ipynb
@@ -601,7 +601,7 @@
     "sample_df = pd.read_csv(path.join('data', 'sample_df.tsv'), sep=\"\\t\", header='infer')\n",
     "\n",
     "# Finally we load directly from the ICGC database the histology excel file\n",
-    "histology_df = pd.read_excel('https://dcc.icgc.org/api/v1/download?fn=/PCAWG/clinical_and_histology/pcawg_specimen_histology_August2016_v9.xlsx')\n",
+    "histology_df = pd.read_excel('data/pcawg_specimen_histology_August2016_v9.xlsx')\n",
     "histology_df.columns = ['icgc_specimen_id'] + list(histology_df.columns[1:])\n",
     "histology_df"
    ]
