Modified DL session

--- a/0_Complete_course.ipynb
+++ b/0_Complete_course.ipynb
@@ -5948,13 +5948,20 @@
     "\n",
     "<!-- Add an empty line here -->\n",
     "\n",
+    "---\n",
     "\n",
     "**Advantages:**\n",
     "   - Dense neural networks are very **versatile** and can be applied to a wide range of data and tasks, including classification and regression, with a straightforward architecture of input, hidden, and output layers.\n",
     "\n",
     "**Disadvantages:**\n",
     " - Dense neural networks do **not inherently understand spatial relationships** in data. That is why they are less effective for tasks where spatial information is crucial, such as image processing.\n",
-    "- Moreover, FNNs are prone to **overfitting**, especially with large numbers of parameters. Hence, regularization techniques may be required to mitigate this effect."
+    "- Moreover, FNNs are prone to **overfitting**, especially with large numbers of parameters. Hence, regularization techniques may be required to mitigate this effect.\n",
+    "\n",
+    "<!-- Add an empty line here -->\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<!-- Add an empty line here -->"
    ]
   },
   {
@@ -5962,7 +5969,7 @@
    "id": "72780977",
    "metadata": {},
    "source": [
-    "We are going to train a dense neural network as our first hands-on exercise. For that purpose we are going to use the **keras** package, which is an open-source and user-friendly high-level neural networks API written in Python.\n",
+    "We are going to train a dense neural network as our first hands-on exercise. For that purpose we are going to use **keras** the user-friendly high-level neural networks API written in Python.\n",
     "\n",
     "The advantatge of this package is that is compatible with various backends (it can run control different numerical computation libraries), for instance, **TensorFlow** where it is integrated as its official high-level API. **TensorFlow** (developed by *Google*) is, together with **PyTorch** (developed by *Meta*) the most popular software for deep learning.\n",
     "\n",
@@ -5988,28 +5995,23 @@
     "import numpy as np\n",
     "from os import path\n",
     "\n",
-    "# To ignore some plot warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "# We load the expression data which will be the features X array (needs to be transposed)\n",
     "expression_df = pd.read_csv(path.join('data', 'gene_expression.tsv.gz'),\n",
     "                                                        sep=\"\\t\", header='infer', index_col=0, compression='gzip')\n",
-    "X = expression_df.to_numpy().T\n",
     "\n",
-    "# Get sample dataframe with the information\n",
     "sample_df = pd.read_csv(path.join('data', 'sample_df.tsv'), sep=\"\\t\", header='infer')\n",
     "\n",
-    "# Finally we load directly from the ICGC database the histology excel file\n",
     "histology_df = pd.read_excel('data/pcawg_specimen_histology_August2016_v9.xlsx')\n",
     "histology_df.columns = ['icgc_specimen_id'] + list(histology_df.columns[1:])\n",
-    "\n",
-    "# Generate a dictionary to translate the Specimen IDs to the histological subtype and get the labels y\n",
     "tumortype_dict = dict(zip(histology_df.icgc_specimen_id, histology_df.histology_abbreviation))\n",
-    "cancer_types = list(map(lambda x: tumortype_dict[x], expression_df.columns))\n",
+    "\n",
+    "# Identify intersection columns\n",
+    "valid_samples = [col for col in expression_df.columns if col in tumortype_dict]\n",
+    "expression_df = expression_df[valid_samples]\n",
+    "X = expression_df.to_numpy().T\n",
+    "\n",
+    "cancer_types = [tumortype_dict[x] for x in expression_df.columns]\n",
     "labels_dict = {gene_id: i for i, gene_id in enumerate(set(cancer_types))}\n",
-    "y = np.array(list(map(lambda x: labels_dict[x], cancer_types)))\n",
-    "labels_dict"
+    "y = np.array([labels_dict[x] for x in cancer_types])"
    ]
   },
   {
@@ -6150,7 +6152,7 @@
     "# We define a networks made of sequential layers of neurons\n",
     "model = Sequential()\n",
     "## Two hidden layers densely connected of (the first one with an input of the shape of the 30 PCA values)\n",
-    "## Note that we use the sigmoid activation function\n",
+    "## Note that we use the sigmoid activation function on both input and hidden layers\n",
     "model.add(Dense(n_intermediate, activation='sigmoid', input_shape=(X_train.shape[-1],)))\n",
     "model.add(Dense(n_intermediate, activation='sigmoid'))\n",
     "## An output layer with the softmax function\n",
@@ -6167,7 +6169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.optimizers import SGD\n",
+    "from keras.optimizers import SGD # Stochastic Gradient Descent optimizer, the algorithm to minimize the loss function\n",
     "\n",
     "# Compile the model with categorical crossentropy as the loss function and with a 5% of learning rate\n",
     "model.compile(\n",
@@ -6259,7 +6261,7 @@
    "source": [
     "What can we observe? Note that:\n",
     "\n",
-    "- At the start both training and validation loss values are high but they both shrink as the training continues. The test loss finnally reaches a value and becomes stable while the one from the training dataset keeps being minimized although slowly.\n",
+    "- At the start both training and validation loss values are high but they both shrink as the training continues. The test loss finally reaches a value and becomes stable while the one from the training dataset keeps being minimized although slowly.\n",
     "\n",
     "- Analogously, at the start both training and validation accuracies are close to what we expect from a random classifier (probability of 1/27 classes) but they both improves greatly as the training continues. The training accuracy at some point keeps improving slowly while the one at the test dataset reaches a plateau.\n",
     "\n",
@@ -6424,6 +6426,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4c4c22a",
+   "metadata": {},
+   "source": [
+    "Note that imshow raises a warning: after applying the kernel, the resulting values are beyond the normal range of floats and integers that codify an image; **convolution operations might generate value ranges that are not directly interpretable as images**, which is why outputs must be properly normalized.\n",
+    "\n",
+    "This also applies when feeding an image to a CNN, where the input should be converted in ranges of values that the input layer accepts.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "CNNs apply convolutions recurrently on different layers so the output of one layer is the input of the next one. To exemplify it, let's apply a kernel that blurs the image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4b1d47d",
@@ -6482,7 +6498,7 @@
    "id": "f7d4a301",
    "metadata": {},
    "source": [
-    "Based on the same principle, CNNs apply convolutions and other types of operations combined into an architecture of layers with two main purposes:\n",
+    "Hence, ased on the same principle, CNNs apply convolutions and other types of operations combined into an architecture of layers with two main purposes:\n",
     "\n",
     "1. **Learn the features** of the images in a hierarchical way.\n",
     "\n",
@@ -6524,6 +6540,7 @@
     "\n",
     "<!-- Add an empty line here -->\n",
     "   \n",
+    "---\n",
     "\n",
     "**Advantages:**\n",
     "- CNNs are designed to **capture spatial hierarchies** through the different rounds of convolutional layers.\n",
@@ -6532,7 +6549,9 @@
     "**Disadvantages:**\n",
     "- CNNs have a more **complex architecture** which implies a **difficult interpretation** of what are processing the last layers.\n",
     "- CNNs usually **require a large amount of labeled data** for training, especially for deep architectures, so data scarcity might lead to suboptimal performance.\n",
-    "- CNNs may struggle to capture long-range dependencies in data as they focus on local structures, hence, they are **less effective for tasks where global context is crucial**."
+    "- CNNs may struggle to capture long-range dependencies in data as they focus on local structures, hence, they are **less effective for tasks where global context is crucial**.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -6698,7 +6717,7 @@
     "# We define some starting parameters\n",
     "batch_size = 128\n",
     "num_classes = 2\n",
-    "epochs = 50\n",
+    "epochs = 100\n",
     "img_rows, img_cols = X_train_gray.shape[1], X_train_gray.shape[2]\n",
     "input_shape = (img_rows, img_cols, 1)\n",
     "\n",
@@ -6773,16 +6792,119 @@
     "\n",
     "Moreover, by comparing the training and testing dataset loss and accuracy, we can infer that a little earlier of the 20 epochs the model cannot improve more since the metrics on the test dataset get stuck (it fluctuates or even decays) while the training metrics keep improving, suggesting that the model enters into an overfitting dynamic.\n",
     "\n",
-    "This was expected, since LeNet-5 is a very simple CNN whose main application is to distinguish digits (https://en.wikipedia.org/wiki/LeNet). Note that the CNNs proposed by the author of the dataset they have far more hidden layers and complexity than the one explained here. This allows to reach 0.75 levels of accuracy after very few epochs of training."
+    "This was expected, since LeNet-5 is a very simple CNN whose main application is to distinguish digits (https://en.wikipedia.org/wiki/LeNet), not for complex textures like cancer histology. To get better results, we need a \"modern\" approach."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53423588",
+   "metadata": {},
+   "source": [
+    "### Improving CNN Performance\n",
+    "\n",
+    "Since we observed **Overfitting** (Training accuracy > Test accuracy) and limited performance, we will upgrade our approach. We will move from a 1990s architecture to a modern VGG-style block architecture by introducing three key concepts:\n",
+    "\n",
+    "1. **Dropout:** Randomly ignoring neurons during training. This prevents neurons from co-adapting too much and forces the network to learn more robust features.\n",
+    "2. **Batch Normalization:** Normalizing the inputs of each layer (re-centering and re-scaling). This stabilizes the learning process and drastically speeds up training.\n",
+    "3. **Data Augmentation:** We have a small dataset. We can artificially increase it by rotating, shifting, and flipping our existing images. This teaches the model that a cancer cell is still a cancer cell, even if it's upside down.\n",
+    "4. **Change the optimizer:** For instance, Adam optimizer, which generally performs better than SGD for this type of problem.\n",
+    "5. **Change the learning rate:** The sawtooth pattern on the validation dataset points to a too high leraning rate. We can also dinamically modify it during training based on the evilution of the test dataset.\n",
+    "\n",
+    "Let's implement this improved model:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cda6c664",
+   "id": "8edc94ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import (\n",
+    "    Dropout,\n",
+    "    BatchNormalization,\n",
+    "    RandomRotation,\n",
+    "    RandomTranslation,\n",
+    "    RandomFlip\n",
+    ")\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.callbacks import ReduceLROnPlateau\n",
+    "\n",
+    "# 3. Data Augmentation Configuration\n",
+    "# We define how we want to \"distort\" the images to create new training samples\n",
+    "data_augmentation = Sequential([\n",
+    "    RandomRotation(0.11),          # ≈ 20 degrees\n",
+    "    RandomTranslation(0.2, 0.2),   # width & height shift\n",
+    "    RandomFlip(\"horizontal_and_vertical\"),\n",
+    "])\n",
+    "\n",
+    "# 1 and 2 Improved Architecture\n",
+    "# We use a pattern common in modern nets: Conv -> BatchNorm -> Pool -> Dropout\n",
+    "model = Sequential([\n",
+    "    # Data augmentation runs only during training\n",
+    "    data_augmentation,\n",
+    "\n",
+    "    # Block 1\n",
+    "    Conv2D(32, (3, 3), activation='relu', input_shape=(50, 50, 1)),\n",
+    "    BatchNormalization(),\n",
+    "    MaxPool2D((2, 2)),\n",
+    "    Dropout(0.25),\n",
+    "\n",
+    "    # Block 2\n",
+    "    Conv2D(64, (3, 3), activation='relu'),\n",
+    "    BatchNormalization(),\n",
+    "    MaxPool2D((2, 2)),\n",
+    "    Dropout(0.25),\n",
+    "\n",
+    "    # Fully Connected\n",
+    "    Flatten(),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    BatchNormalization(),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(num_classes, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# 4 We switch to Adam, with specified starting learning rate.\n",
+    "model.compile(\n",
+    "    optimizer=Adam(learning_rate=3e-4),\n",
+    "    loss='categorical_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "## The learning rate scheduler reduces the learning rate when the validation loss plateaus\n",
+    "lr_scheduler = ReduceLROnPlateau(\n",
+    "    monitor=\"val_loss\",\n",
+    "    factor=0.5,      # halve the LR\n",
+    "    patience=4,      # wait 4 epochs\n",
+    "    min_lr=1e-6,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "# Train with Augmentation\n",
+    "history_improved = model.fit(\n",
+    "    X_train_gray,\n",
+    "    Y_train_one_hot,\n",
+    "    batch_size=32,\n",
+    "    epochs=100,\n",
+    "    validation_data=(X_test_gray, Y_test_one_hot),\n",
+    "    callbacks=[lr_scheduler], # The learning rate scheduler\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "plot_loss_curves(history_improved)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcebb27f",
+   "metadata": {},
+   "source": [
+    "Note that, comparing this new plot with the previous one, we observe:\n",
+    "\n",
+    "- The Training and Validation loss lines are closer together (reduced overfitting) when plateaus.\n",
+    "- The accuracy on the test does not improve much, but remains stable."
+   ]
   }
  ],
  "metadata": {
